# walking_zoo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
src/locomotion_ros2_adapters/locomotion_ros2_gait_lab_sil/: CMakeLists.txt  README.md  package.xml  plugins.xml  plugins_ros2_control.xml  plugins_ros2_control_controllers.xml
src/locomotion_ros2_adapters/locomotion_ros2_mock_adapter/: CMakeLists.txt  package.xml  plugins.xml
src/locomotion_ros2_adapters/locomotion_ros2_unitree_sdk2/: CMakeLists.txt  README.md  package.xml  plugins.xml
src/locomotion_ros2_bringup/: CMakeLists.txt  package.xml
src/locomotion_ros2_bringup/config/: gait_lab_sil_ros2_control.yaml  gait_lab_sil_ros2_control_embedded.yaml  gait_lab_sil_ros2_control_embedded_nav.yaml  gait_lab_sil_ros2_control_forward.yaml
src/locomotion_ros2_bringup/launch/: gait_lab_sil_nav2.launch.py  gait_lab_sil_ros2_control_runtime.launch.py  gait_lab_sil_runtime.launch.py  mock_nav2_bridge.launch.py  mock_runtime.launch.py  mujoco_g1_gait_demo.launch.py  mujoco_g1_gait_showcase.launch.py  mujoco_g1_runtime_showcase.launch.py
src/locomotion_ros2_bringup/maps/: arena.pgm  arena.yaml  make_arena_map.py
src/locomotion_ros2_bringup/params/: mock_robot_profile.yaml  mock_runtime.yaml  nav2_sil.yaml  nav2_sil_embedded_overrides.yaml  nav2_sil_monolithic_overrides.yaml
src/locomotion_ros2_bt/: CMakeLists.txt  package.xml  plugins.xml
src/locomotion_ros2_bt/bt_xml/: locomotion_ros2_nav2_recovery.xml  locomotion_ros2_nav2_recovery_branch.xml  locomotion_ros2_recovery_live.xml  navigate_to_pose_w_walking_recovery.xml
src/locomotion_ros2_bt/config/: nav2_bt_navigator.yaml
src/locomotion_ros2_bt/launch/: recovery.launch.py
src/locomotion_ros2_bt/src/: check_walking_ready.cpp  clear_walking_fault.cpp  locomotion_ros2_bt_nodes.cpp  nav2_recovery_harness.cpp  nav2_recovery_nodes.cpp  recovery_bt.cpp  recovery_node.cpp
src/locomotion_ros2_bt/test/: test_locomotion_ros2_bt_nodes.cpp  test_nav2_bt_recovery_nodes.cpp  test_recovery_bt.cpp
src/locomotion_ros2_description/: CMakeLists.txt  package.xml
src/locomotion_ros2_description/meshes/: .gitkeep
src/locomotion_ros2_description/rviz/: locomotion_ros2.rviz
src/locomotion_ros2_description/urdf/: g1_sil_ros2_control.urdf  g1_sil_ros2_control_forward.urdf  mock_legged_robot.urdf
src/locomotion_ros2_msgs/: CMakeLists.txt  package.xml
src/locomotion_ros2_msgs/action/: ExecuteFootstepPlan.action  ExecuteSemanticAction.action  ExecuteVelocity.action
src/locomotion_ros2_msgs/msg/: AdapterStatus.msg  BodyPoseCommand.msg  Footstep.msg  RobotProfile.msg  SafetyState.msg
src/locomotion_ros2_msgs/srv/: ClearFault.srv  SetLocomotionMode.srv
src/locomotion_ros2_nav2/: CMakeLists.txt  package.xml
src/locomotion_ros2_nav2/params/: nav2_bridge.yaml
src/locomotion_ros2_nav2/src/: cmd_vel_bridge.cpp  cmd_vel_bridge_main.cpp  legged_velocity_shaper.cpp
src/locomotion_ros2_nav2/test/: test_legged_velocity_shaper.cpp
src/locomotion_ros2_runtime/: CMakeLists.txt  package.xml
src/locomotion_ros2_runtime/launch/: footstep_markers.launch.py  runtime.launch.py
src/locomotion_ros2_runtime/src/: adapter_loader.cpp  command_arbiter.cpp  footstep_marker_node.cpp  footstep_planner.cpp  mode_manager.cpp  occupancy_terrain.cpp  runtime_main.cpp  step_feasibility_checker.cpp  terrain_model.cpp  walking_runtime_manager.cpp
src/locomotion_ros2_runtime/test/: test_command_arbiter.cpp  test_footstep_planner.cpp  test_footstep_terrain_planner.cpp  test_mode_manager.cpp  test_occupancy_terrain.cpp  test_step_feasibility_checker.cpp  test_terrain_model.cpp
src/walking_zoo_adapters/walking_zoo_gait_lab_sil/: CMakeLists.txt  README.md  package.xml  plugins.xml
src/walking_zoo_adapters/walking_zoo_unitree_go2/: CMakeLists.txt  README.md  package.xml  plugins.xml
src/walking_zoo_adapters/walking_zoo_unitree_sdk2/: CMakeLists.txt  README.md  package.xml  plugins.xml
src/walking_zoo_bringup/: CMakeLists.txt  package.xml
src/walking_zoo_bringup/launch/: gait_lab_sil_nav2.launch.py  gait_lab_sil_runtime.launch.py  mock_runtime.launch.py  mujoco_g1_gait_demo.launch.py  mujoco_g1_gait_showcase.launch.py  mujoco_g1_runtime_showcase.launch.py
src/walking_zoo_bringup/params/: mock_robot_profile.yaml  mock_runtime.yaml
src/walking_zoo_bringup/rviz/: walking_zoo.rviz
src/walking_zoo_bt/: CMakeLists.txt  package.xml  plugins.xml
src/walking_zoo_bt/bt_xml/: navigate_to_pose_w_walking_recovery.xml  walking_zoo_nav2_recovery.xml  walking_zoo_nav2_recovery_branch.xml  walking_zoo_recovery_live.xml
src/walking_zoo_bt/config/: nav2_bt_navigator.yaml
src/walking_zoo_bt/launch/: recovery.launch.py
src/walking_zoo_bt/src/: check_walking_ready.cpp  clear_walking_fault.cpp  nav2_recovery_harness.cpp  nav2_recovery_nodes.cpp  recovery_bt.cpp  recovery_node.cpp  walking_zoo_bt_nodes.cpp
src/walking_zoo_bt/test/: test_nav2_bt_recovery_nodes.cpp  test_recovery_bt.cpp  test_walking_zoo_bt_nodes.cpp
src/walking_zoo_core/: CMakeLists.txt  package.xml
src/walking_zoo_core/src/: robot_profile.cpp  types.cpp
src/walking_zoo_core/test/: test_robot_profile.cpp
src/walking_zoo_examples/: CMakeLists.txt  README.md  package.xml
src/walking_zoo_examples/scripts/: gait_lab_sil_sim.py  mujoco_g1_gait_demo.py  mujoco_g1_gait_showcase.py  send_estop.py  send_mock_cmd_vel.py  walking_zoo_demo_recorder.py  walking_zoo_lerobot_export.py
src/walking_zoo_examples/test/: test_lerobot_export.py  test_lerobot_hf_compat.py
src/walking_zoo_nav2/: CMakeLists.txt  package.xml
src/walking_zoo_nav2/launch/: cmd_vel_bridge.launch.py
src/walking_zoo_nav2/params/: nav2_bridge.yaml
src/walking_zoo_nav2/src/: cmd_vel_bridge.cpp  cmd_vel_bridge_main.cpp  legged_velocity_shaper.cpp
src/walking_zoo_nav2/test/: test_legged_velocity_shaper.cpp
src/walking_zoo_runtime/: CMakeLists.txt  package.xml
src/walking_zoo_safety/: CMakeLists.txt  package.xml
src/walking_zoo_vla/: CMakeLists.txt  README.md  package.xml
(+308 files in other folders)
