<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>locomotion_ros2_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and demo configuration for locomotion_ros2.</description>
  <maintainer email="maintainers@example.com">locomotion_ros2 maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>locomotion_ros2_description</exec_depend>
  <exec_depend>locomotion_ros2_examples</exec_depend>
  <exec_depend>locomotion_ros2_gait_lab_sil</exec_depend>
  <exec_depend>locomotion_ros2_mock_adapter</exec_depend>
  <exec_depend>locomotion_ros2_nav2</exec_depend>
  <exec_depend>locomotion_ros2_runtime</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
