<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>locomotion_ros2_description</name>
  <version>0.1.0</version>
  <description>Mock robot description assets for locomotion_ros2 visualization.</description>
  <maintainer email="maintainers@example.com">locomotion_ros2 maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
