<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>walking_zoo_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and demo configuration for walking_zoo.</description>
  <maintainer email="maintainers@example.com">walking_zoo maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>walking_zoo_mock_adapter</exec_depend>
  <exec_depend>walking_zoo_nav2</exec_depend>
  <exec_depend>walking_zoo_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
