<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>locomotion_ros2_gait_lab_sil</name>
  <version>0.1.0</version>
  <description>
    Software-in-the-loop locomotion_ros2 adapter that drives a MuJoCo Unitree G1
    through a gait_lab controller (default: the reinforcement-learned rl-residual
    policy). A thin ROS bridge to a companion Python sim node; carries no
    MuJoCo/Python build dependency.
  </description>
  <maintainer email="maintainers@example.com">locomotion_ros2 maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>locomotion_ros2_core</depend>
  <depend>locomotion_ros2_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
